--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "homepage": "https://gitlab.com/diplomacy-network/dnw-map-tools#readme",
   "dependencies": {
     "fast-xml-parser": "^3.12.16",
-    "jsonq": "^1.2.0",
-    "xml2js": "^0.4.19"
+    "jmespath": "^0.15.0"
   },
   "devDependencies": {
     "eyes": "^0.1.8"
